--- a/SCSS/STYLE.SCSS
+++ b/SCSS/STYLE.SCSS
@@ -19,6 +19,8 @@ header {
     display: flex;
     align-items: center;
     flex-wrap: wrap;
+    position: sticky;
+    top: 0;
 
     div.logo {
         display: flex;
